--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@nestjs/swagger": "^6.0.4"
   },
   "dependencies": {
-    "@asyncapi/generator": "1.9.12",
+    "@asyncapi/generator": "https://github.com/nongtm/generator.git",
     "@asyncapi/html-template": "0.26.0",
     "js-yaml": "4.1.0",
     "reflect-metadata": "0.1.13"
@@ -69,7 +69,7 @@
     "ts-loader": "9.3.1",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0",
-    "typescript": "4.3.5"
+    "typescript": "^4.8.4"
   },
   "config": {
     "puppeteer_skip_chromium_download": true
