--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "microservices"
   ],
   "peerDependencies": {
-    "@nestjs/common": "^9.0.3",
-    "@nestjs/core": "^9.0.3",
-    "@nestjs/swagger": "^6.0.4"
+    "@nestjs/common": "^9.1.4",
+    "@nestjs/core": "^9.1.4",
+    "@nestjs/swagger": "^6.1.2"
   },
   "dependencies": {
     "@asyncapi/generator": "https://github.com/nongtm/generator.git",
@@ -39,12 +39,12 @@
   },
   "devDependencies": {
     "@nestjs/cli": "9.1.4",
-    "@nestjs/platform-express": "9.1.2",
-    "@nestjs/platform-fastify": "9.1.2",
-    "@nestjs/platform-socket.io": "9.1.2",
+    "@nestjs/platform-express": "^9.1.4",
+    "@nestjs/platform-fastify": "^9.1.4",
+    "@nestjs/platform-socket.io": "^9.1.4",
     "@nestjs/schematics": "9.0.3",
-    "@nestjs/testing": "9.1.2",
-    "@nestjs/websockets": "9.1.2",
+    "@nestjs/testing": "^9.1.4",
+    "@nestjs/websockets": "^9.1.4",
     "@types/express": "4.17.14",
     "@types/jest": "29.0.3",
     "@types/js-yaml": "4.0.5",
