--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@nestjs/cli": "9.1.4",
     "@nestjs/common": "^9.1.4",
     "@nestjs/core": "^9.1.4",
-    "@nestjs/swagger": "^6.1.2"
+    "@nestjs/swagger": "^6.1.2",
     "@nestjs/platform-express": "^9.1.4",
     "@nestjs/platform-fastify": "^9.1.4",
     "@nestjs/platform-socket.io": "^9.1.4",
