--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "supertest": "6.2.4",
     "ts-jest": "29.0.3",
     "ts-loader": "9.3.1",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.4.0",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.8.4"
   },
